welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:25: error: '(' expected but '{' found.
			  else if { 
                                  ^SnakeBuggle:31: error: illegal start of simple expression
      }
      ^